fix flower entity handling